11/11/10 use intersects(Shape) instead of contains(Point2D) for voltmeter probes
11/11/10 test for shape intersection between wires and voltmeter probes
11/11/10 make voltmeter read 0V when probes are touching
11/11/10 add shapes for voltmeter probe tips
11/11/10 add infrastructure for touching voltmeter probe tips together to display 0V
11/11/10 specializations of Wire for connecting a battery to a capacitor
11/11/10 specializations of WireSegment for connection to battery and capacitor, length changes dynamically
11/11/10 add y-offset getters for battery terminals, for computing wire connection points
11/11/10 move all battery shape constants inside Battery model element
11/11/10 adjusted battery body bounds to match new battery images
11/11/10 modified the battery image so that only the top terminal is visible, and the positive terminal doesn't extend above body
11/11/10 move creation of battery body shape into Battery model element
11/11/10 move rendering of battery terminal shapes into BatteryNode
11/11/10 restore spacing between dielectric charges
# 0.00.39 (45953) Nov 11, 2010
11/11/10 dev version for discussion about dielectric charge spacing
11/11/10 temporarily double max spacing between dielectric charges to demo that this does not fix scale problem
11/10/10 put voltmeter in front of E-Field detector, since voltmeter is smaller
11/10/10 move circuit up a little so bottom wire doesn't get clipped when window is maximized
11/10/10 drop feature that shows intersection of probes with other objects, probes will always be on top (decided in 11/10 status meeting)
# 0.00.38 (45903) Nov 9, 2010
11/9/10 dev version to demo progress on voltage measurement
11/9/10 new 3D probes with parallel projection from Noah P (images and assets)
11/9/10 get wire segment endpoints from battery and capacitor model elements, not constants
11/9/10 fix wire shape algorithm, it wouldn't handle the types of wires in Multiple Capacitor circuits