@@ -1,3 +1,4 @@
+11/11/10 don't try to constrain locations unless !World.isBoundsEmpty
 11/11/10 use intersects(Shape) instead of contains(Point2D) for voltmeter probes
 11/11/10 test for shape intersection between wires and voltmeter probes
 11/11/10 make voltmeter read 0V when probes are touching
